exports[`test MultiInput with 4 default rows 1`] = `
<div>
  <div
    className="list-entry">
    <label
      className="text-box-number-label"
      htmlFor="test">
      1
      .
    </label>
    <input
      className="text-box "
      defaultValue=""
      id="test"
      name="test[]"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text" />
  </div>
  <div
    className="list-entry">
    <label
      className="text-box-number-label"
      htmlFor="test-1">
      2
      .
    </label>
    <input
      className="text-box "
      defaultValue=""
      id="test-1"
      name="test[]"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text" />
    <button
      className="button-secondary"
      onClick={[Function]}
      type="button">
      remove 
      <span
        className="visuallyhidden">
        number 
        2
      </span>
    </button>
  </div>
  <div
    className="list-entry">
    <label
      className="text-box-number-label"
      htmlFor="test-2">
      3
      .
    </label>
    <input
      className="text-box "
      defaultValue=""
      id="test-2"
      name="test[]"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text" />
    <button
      className="button-secondary"
      onClick={[Function]}
      type="button">
      remove 
      <span
        className="visuallyhidden">
        number 
        3
      </span>
    </button>
  </div>
  <div
    className="list-entry">
    <label
      className="text-box-number-label"
      htmlFor="test-3">
      4
      .
    </label>
    <input
      className="text-box "
      defaultValue=""
      id="test-3"
      name="test[]"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text" />
    <button
      className="button-secondary"
      onClick={[Function]}
      type="button">
      remove 
      <span
        className="visuallyhidden">
        number 
        4
      </span>
    </button>
  </div>
  <button
    className="button-secondary"
    onClick={[Function]}
    type="button">
    Add another row
  </button>
</div>
`;

exports[`test MultiInput with 4 rows 1`] = `
<div>
  <div
    className="list-entry">
    <label
      className="text-box-number-label"
      htmlFor="test">
      1
      .
    </label>
    <input
      className="text-box "
      defaultValue="One"
      id="test"
      name="test[]"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text" />
  </div>
  <div
    className="list-entry">
    <label
      className="text-box-number-label"
      htmlFor="test-1">
      2
      .
    </label>
    <input
      className="text-box "
      defaultValue="Two"
      id="test-1"
      name="test[]"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text" />
    <button
      className="button-secondary"
      onClick={[Function]}
      type="button">
      remove 
      <span
        className="visuallyhidden">
        number 
        2
      </span>
    </button>
  </div>
  <div
    className="list-entry">
    <label
      className="text-box-number-label"
      htmlFor="test-2">
      3
      .
    </label>
    <input
      className="text-box "
      defaultValue="Three"
      id="test-2"
      name="test[]"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text" />
    <button
      className="button-secondary"
      onClick={[Function]}
      type="button">
      remove 
      <span
        className="visuallyhidden">
        number 
        3
      </span>
    </button>
  </div>
  <div
    className="list-entry">
    <label
      className="text-box-number-label"
      htmlFor="test-3">
      4
      .
    </label>
    <input
      className="text-box "
      defaultValue="Four"
      id="test-3"
      name="test[]"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text" />
    <button
      className="button-secondary"
      onClick={[Function]}
      type="button">
      remove 
      <span
        className="visuallyhidden">
        number 
        4
      </span>
    </button>
  </div>
  <button
    className="button-secondary"
    onClick={[Function]}
    type="button">
    Add another row
  </button>
</div>
`;

exports[`test MultiInput with no props 1`] = `
<div>
  <div
    className="list-entry">
    <label
      className="text-box-number-label"
      htmlFor="test">
      1
      .
    </label>
    <input
      className="text-box "
      defaultValue=""
      id="test"
      name="test[]"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text" />
  </div>
  <button
    className="button-secondary"
    onClick={[Function]}
    type="button">
    Add another row
  </button>
</div>
`;
